# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /api/v1
 definitions:
+  modules.ModuleResponse:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
   techs.LevelResponse:
     properties:
       id:
@@ -112,6 +119,23 @@ paths:
       summary: Informações do usuário
       tags:
       - User
+  /modules:
+    get:
+      consumes:
+      - application/json
+      description: lista todas as módulos disponiveis
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/modules.ModuleResponse'
+            type: array
+      summary: Lista todas os módulos
+      tags:
+      - Modules
   /signin:
     post:
       consumes:
