# internal/resources/modules/moduleResponse.go
@@ -1,0 +1,6 @@
+package modules
+
+type ModuleResponse struct {
+	ID   uint   `json:"id"`
+	Name string `json:"name"`
+}
