# internal/router/routes.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/eduahcb/hub_api_go/internal/database"
 	"github.com/eduahcb/hub_api_go/internal/middlewares"
+	moduleshandlers "github.com/eduahcb/hub_api_go/internal/resources/modules/handlers"
 	techshandlers "github.com/eduahcb/hub_api_go/internal/resources/techs/handlers"
 	usershandlers "github.com/eduahcb/hub_api_go/internal/resources/users/handlers"
 	"github.com/eduahcb/hub_api_go/pkg/responses"
@@ -36,6 +37,7 @@ func initRoutes(r *mux.Router, client *gorm.DB, rdb *redis.Client) {
 	// public routes
 	api.HandleFunc("/signin", usershandlers.Signin(db)).Methods(http.MethodPost)
 	api.HandleFunc("/signup", usershandlers.Signup(db)).Methods(http.MethodPost)
+  api.HandleFunc("/modules", moduleshandlers.GetAll(db)).Methods(http.MethodGet)
 
 	// private routes
 
@@ -51,4 +53,6 @@ func initRoutes(r *mux.Router, client *gorm.DB, rdb *redis.Client) {
 	api.HandleFunc("/techs/{id}", middlewares.Authentication(db, techshandlers.GetById(db))).Methods(http.MethodGet)
 	api.HandleFunc("/techs/{id}", middlewares.Authentication(db, techshandlers.Delete(db))).Methods(http.MethodDelete)
 	api.HandleFunc("/techs/{id}", middlewares.Authentication(db, techshandlers.Update(db))).Methods(http.MethodPut)
+
+
 }
